uses openApi for bikes
